@@ -8,7 +8,7 @@
 
     <groupId>es.urjc.etsii.grafo</groupId>
     <artifactId>mork-parent</artifactId>
-    <version>0.20-SNAPSHOT</version>
+    <version>0.21-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>core</module>
@@ -90,13 +90,13 @@
             <dependency>
                 <groupId>es.urjc.etsii.grafo</groupId>
                 <artifactId>mork</artifactId>
-                <version>0.20-SNAPSHOT</version>
+                <version>0.21-SNAPSHOT</version>
             </dependency>
 
             <dependency>
                 <groupId>es.urjc.etsii.grafo</groupId>
                 <artifactId>autoconfig</artifactId>
-                <version>0.20-SNAPSHOT</version>
+                <version>0.21-SNAPSHOT</version>
             </dependency>
 
             <dependency>
@@ -120,6 +120,14 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${msurefire.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
